route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: griffincollege-spring-petclinic
    chart: griffincollege-spring-petclinic
    heritage: Tiller
    release: griffincollege-spring-petclinic
  name: griffincollege-spring-petclinic
  namespace: __PROJECT__
spec:
  host: griffincollege-spring-petclinic-__PROJECT__.apps.technical-review.perspectatechdemos.com
  port:
    targetPort: http
  subdomain: ""
  to:
    kind: Service
    name: griffincollege-spring-petclinic
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
